--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 annotated-types==0.6.0
 asgiref==3.8.1
+asttokens==3.0.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django==5.0.6
+decorator==5.2.1
+Django==5.2.7
+django-extensions==4.1
+executing==2.2.1
 google-ai-generativelanguage==0.6.4
 google-api-core==2.19.0
 google-api-python-client==2.129.0
@@ -15,17 +19,33 @@ grpcio==1.63.0
 grpcio-status==1.62.2
 httplib2==0.22.0
 idna==3.7
+ipython==9.6.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+matplotlib-inline==0.2.1
+numpy==2.3.4
+parso==0.8.5
+pexpect==4.9.0
+pgvector==0.4.1
+prompt_toolkit==3.0.52
 proto-plus==1.23.0
 protobuf==4.25.3
+psycopg2-binary==2.9.11
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.7.1
 pydantic_core==2.18.2
+Pygments==2.19.2
 pyparsing==3.1.2
 requests==2.31.0
 rsa==4.9
 sqlparse==0.5.0
+stack-data==0.6.3
 tqdm==4.66.4
+traitlets==5.14.3
 typing_extensions==4.11.0
 uritemplate==4.1.1
 urllib3==2.2.1
+wcwidth==0.2.14
