--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,14 @@
-asgiref==3.7.2
-asttokens==3.0.0
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-bcrypt==3.2.2
-beautifulsoup4==4.12.3
-blinker==1.7.0
-Brlapi==0.8.5
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==25.1.4
-colorama==0.4.6
-comm==0.2.2
-command-not-found==0.3
-configobj==5.0.8
-contourpy==1.3.2
-coverage==7.4.4
-cryptography==41.0.7
-cssselect==1.2.0
-cupshelpers==1.0
-cycler==0.12.1
-dbus-python==1.3.2
-debugpy==1.8.14
-decorator==5.2.1
-defer==1.0.6
-distro==1.9.0
-distro-info==1.7+build1
-Django==4.2.11
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==2.1.4
-executing==2.2.0
-fasteners==0.18
-fonttools==4.57.0
-gcovr==7.0
-gyp==0.1
-html5lib==1.1
-httplib2==0.20.4
-idna==3.6
-importlib-metadata==4.12.0
-ipykernel==6.29.5
-ipython==9.1.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-libvirt-python==10.0.0
-louis==3.29.0
-lxml==5.2.1
-Mako==1.3.2.dev0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-meson==1.3.2
-monotonic==1.6
-more-itertools==10.2.0
-nest-asyncio==1.6.0
-netaddr==0.8.0
-netifaces==0.11.0
-numpy==1.26.4
-oauthlib==3.2.2
-olefile==0.46
-packaging==24.2
-pandas==2.2.3
-paramiko==2.12.0
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.3.7
-prompt_toolkit==3.0.51
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycairo==1.25.1
-pycryptodomex==3.20.0
-pycups==2.0.1
-Pygments==2.19.1
-PyGObject==3.48.2
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-pyte==0.8.0
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.9.0.post0
-python-debian==0.1.49+ubuntu2
-python-dotenv==1.0.1
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-pyzmq==26.4.0
-requests==2.31.0
-rich==13.7.1
-SciPy==1.11.4
-seaborn==0.13.2
-setuptools==68.1.2
-six==1.17.0
-soupsieve==2.5
-sqlparse==0.4.4
-stack-data==0.6.3
-systemd-python==235
-texttable==1.6.7
-tornado==6.4.2
-traitlets==5.14.3
-tzdata==2025.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-usb-creator==0.3.16
-vboxapi==1
-wadllib==1.3.6
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.7.0
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+asgiref==3.10.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+Django==5.2.8
+django-formtools==2.5.1
+django-widget-tweaks==1.5.0
+idna==3.11
+numpy==2.3.4
+pgvector==0.4.1
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+requests==2.32.5
+sqlparse==0.5.3
+urllib3==2.5.0
