--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
 asgiref==3.10.0
+asttokens==3.0.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
+decorator==5.2.1
 Django==5.2.8
 django-formtools==2.5.1
 django-widget-tweaks==1.5.0
+executing==2.2.1
 idna==3.11
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+matplotlib-inline==0.2.1
 numpy==2.3.4
+parso==0.8.5
+pexpect==4.9.0
 pgvector==0.4.1
+prompt_toolkit==3.0.52
 psycopg2==2.9.11
 psycopg2-binary==2.9.11
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.2
 requests==2.32.5
 sqlparse==0.5.3
+stack-data==0.6.3
+traitlets==5.14.3
 urllib3==2.5.0
+wcwidth==0.2.14
