--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
+asttokens==3.0.1
 certifi==2025.11.12
 charset-normalizer==3.4.4
+decorator==5.2.1
 Django==5.2.8
 django-formtools==2.5.1
 django-widget-tweaks==1.5.0
+executing==2.2.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.0.7
@@ -20,24 +26,34 @@ langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.4
 langgraph-sdk==0.2.9
 langsmith==0.4.43
+matplotlib-inline==0.2.1
 numpy==2.3.5
 ollama==0.6.1
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
+parso==0.8.5
+pexpect==4.9.0
 pgvector==0.4.1
+prompt_toolkit==3.0.52
 psycopg2==2.9.11
 psycopg2-binary==2.9.11
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.12.4
 pydantic_core==2.41.5
+Pygments==2.19.2
 PyYAML==6.0.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 sniffio==1.3.1
 sqlparse==0.5.3
+stack-data==0.6.3
 tenacity==9.1.2
+traitlets==5.14.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+wcwidth==0.2.14
 xxhash==3.6.0
 zstandard==0.25.0
